--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,4 +36,4 @@ jobs:
         -Dsonar.host.url=https://sonarcloud.io \
         -Dsonar.python.coverage.reportPaths=coverage.xml \
         -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-#comenta
+#coment
