--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-       mvn sonar:sonar \
+       sonar:sonar \
         -Dsonar.projectKey=KevOrellana_Feria-Virtual \
         -Dsonar.organization=kevorellana \
         -Dsonar.host.url=https://sonarcloud.io \
